# bardic

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SAVE_LOAD_IMPROVED.md  TODO.md  demo.py  pyproject.toml  pytest.ini  spec.md  test_story.json  test_tags.bard  test_variables.json  tutorial-nicegui-minimal-player.md  tutorial-reflex-minimal-player.md
bardic/: __init__.py
claude_guides/: SAVE_LOAD_IMPROVED.md  Save-Load Game System (Interject).md  Save-Load Game System.md
compiled_stories/: test_adventure.json  test_complex.json  test_complex_conditionals.json  test_complex_functions.json  test_conditional_objects.json  test_conditionals.json  test_dict_objects.json  test_enumerate.json  test_expressions.json  test_full_reading.json  test_functions.json  test_functions_pre.json  test_imports.json  test_imports_objects.json  test_imports_proper.json  test_jump_in_loop.json  test_jumps.json  test_list_objects.json  test_loop_objects.json  test_loops.json  test_loops_conditionals.json  test_markdown.json  test_markdown_dynamic.json  test_method_chaining.json  test_nested.json  test_nested_conditionals.json  test_nested_loops.json  test_object_story.json  test_one_time_choices.json  test_python_blocks.json  test_render_demo.json  test_render_directives.json  test_rpg_combat.json  test_simple.json  test_story.json  test_tarot_objects_story.json  test_variables.json  test_web_context.json
docs/: IMPLEMENTATION_STATUS.md  browser-customization.md  input-directives.md  lint-plugins.md  render-directives.md  spec.md  stdlib.md
game_logic/: test_objects.py  test_tarot_objects.py
nicegui-player/: nicegui_test_player.py  save_manager.py
reflex-player/: .gitignore
tests/: conftest.py  test_adventure.bard  test_adventure.json  test_browser.py  test_choice_bracket_in_conditional.bard  test_choice_simple_expr.bard  test_cli.py  test_complex.json  test_complex_functions.bard  test_dict_objects.bard  test_dict_objects.json  test_directives.py  test_engine_refactor.py  test_error_handling.py  test_executor.py  test_functions.bard  test_functions.json  test_functions_pre.bard  test_hooks.py  test_hooks_manager.py  test_imports.json  test_imports_objects.bard  test_imports_proper.json  test_inline_conditional_in_choice.bard  test_list_objects.json  test_metadata.bard  test_method_chaining.bard  test_nested.bard  test_nested.json  test_object_story.json  test_parser.py  test_passage_params_basic.bard  test_prev_target.py  test_python_blocks.json  test_renderer.py  test_rpg_combat.bard  test_simple.bard  test_state_local_basic.bard  test_state_local_variables.py  test_state_manager.py  (+7 more)
tests_other/: test_at_syntax_runtime.py  test_augmented_runtime.py  test_choice_inline_cond.bard  test_choices_engine.py  test_engine.py  test_engine_refactor.py  test_glue_debug.py  test_inline_comments_runtime.py  test_inline_cond_falsy.bard  test_inline_cond_nested_expr.bard  test_inline_conditionals.bard  test_metadata_runtime.py  test_parser.py  (+2 more)
(+215 files in other folders)
