[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bardic"
dynamic = ["version"]
authors = [{ name = "Kate Louie", email = "katehlouie@gmail.com" }]
description = "Python-first interactive fiction engine"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = [
    "interactive fiction",
    "if",
    "dsl",
    "narrative",
    "gamedev",
    "ink",
    "twine",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Text Processing :: Markup",
]
dependencies = ["click>=8.0", "graphviz"]

[project.urls]
Homepage = "https://github.com/katelouie/bardic"
Issues = "https://github.com/katelouie/bardic/issues"
Documentation = "https://github.com/katelouie/bardic/blob/main/docs/spec.md"

[project.optional-dependencies]
nicegui = ["nicegui", "markdown"]
web = ["fastapi", "uvicorn[standard]"]
reflex = ["reflex", "markdown"]
dev = ["black", "ruff", "mypy", "pytest", "pytest-cov"]

[project.scripts]
bardic = "bardic.cli.main:cli"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",   # line too long — let formatter handle it
]

[tool.ruff.lint.per-file-ignores]
"bardic/compiler/parser.py" = ["F403", "F405"]  # re-export via star import
"bardic/compiler/parsing/__init__.py" = ["F401"]  # re-exports for star import
"bardic/templates/**" = ["F401", "F821"]  # templates are scaffolding with placeholder code
"tests/**" = ["F841"]  # unused variables often intentional (engine.goto() for side effects)
"tests_other/**" = ["F841", "E402"]  # legacy test scripts

[tool.setuptools.dynamic]
version = { attr = "bardic.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["bardic*"]
exclude = ["stories*", "compiled_stories*", "tests*", "CLAUDE.md"]

[tool.setuptools.package-data]
bardic = [
    "templates/**",
    "templates/**/**",
    "templates/**/**/**",
    "templates/**/**/**/**",
]
